<resources>
    <string name="app_name">Android Chat</string>
    <string name="title_activity_session">Contacts</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="picture_transition_name">pic_transition</string>

    <!-- Profile Info -->
    <string name="status_available">Available</string>
    <string name="status_busy">Busy</string>
    <string name="status_happy">Happy</string>
    <string name="status_sad">Sad</string>
    <string name="status_dead">Dead</string>
    <string name="gallery_chooser">Profile Picture</string>
    <string name="chat_gallery_chooser">Upload Picture</string>
    <string name="group_gallery_chooser">Group Picture</string>
    <string name="save_btn">Save &amp; Exit</string>
    <string name="profile_hint">Enter profile Name...</string>
    <string name="profile_group_admin">Admin</string>
    <string name="undo_profile">Undo</string>
    <string name="reset_profile">Reset</string>


    <!-- Chat Activity -->
    <string name="enter_message">Type your message...</string>
    <string name="content_desc_send">Send</string>
    <string name="content_desc_media">Media</string>
    <string name="footer_message">You are no longer a participant of this group</string>


    <!-- My Contacts Class -->
    <string name="dialog_friend_select_action">Actions</string>
    <string name="dialog_chat_select_action">Chat Actions</string>
    <string name="dialog_group_chat_select_action">Group Chat Actions</string>
    <string name="dialog_op1">See Profile</string>
    <string name="dialog_op2">Add to contacts</string>
    <string name="dialog_op3">Chat</string>
    <string name="dialog_op8">Delete Contact</string>


    <string name="contact_active">Active</string>
    <string name="contact_inactive">Inactive</string>

    <!-- Session fragment -->
    <string name="dialog_op4">Delete Chat</string>
    <string name="simple_date">dd/MM/yyyy</string>
    <string name="fragment_empty_chat">No Chats Found</string>

    <!-- Group Session Fragmnet-->
    <string name="dialog_op5">Group Detail</string>
    <string name="dialog_op6">Leave Group</string>
    <string name="dialog_op7">Delete Group</string>

    <!-- Main Activity -->
    <string name="wait">Please wait...</string>

    <string name="selected">Select</string>
    <string name="unselected">Unselect</string>

    <string name="add_contact">Add</string>
    <string name="cancel_contact">Cancel</string>
    <string name="username">Enter username...</string>
    <string name="email">Enter email...</string>
    <string name="title">Enter title...</string>
    <string name="title_activity_first">FirstActivity</string>

    <string name="media_message">Picture</string>

    <!-- LOGIN -->
    <string name="forgot_username"><u>Forgot Username?</u></string>
    <string name="register">Create a account</string>
    <string name="login">Already have an account?</string>

    <!-- Notification Activity -->
    <string name="empty_text">Nothing Found...</string>
    <string name="invitation_message">Hey, want to join me for a chat.</string>
    <string name="invitation_title">Invitation from</string>

    <string name="short_text">Hello</string>
    <string name="long_text">MAC Address - The physical address of the WAN port, as seen from the Internet. IP Address - The current WAN (Internet) IP Address. This field will be blank or 0.0.0.0 if the IP Address is assigned dynamically and there is no connection to Internet.</string>

    <!-- GroupDetail Activity -->
    <string name="be_admin">Become Admin</string>
    <string name="no_admin">No Admin Found</string>
    <string name="dialog_group_details">Options:</string>
    <string name="dialog_op_1">Remove from group</string>

    <!-- Activity titles -->
    <string name="title_create_group">Create Group</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_all_chats">All Chats</string>
    <string name="title_contacts">Contacts</string>
    <string name="title_login">Login</string>
    <string name="title_register">Register</string>
    <string name="title_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_select_member">Select Members</string>
    <string name="title_block_list">Block List</string>

    <!-- Strings related to Settings -->
    <string name="pref_header_account">Account</string>
    <string name="pref_header_help">Help</string>
    <string name="pref_header_about">About</string>

    <string name="pref_cat_support">Support</string>
    <string name="pref_faq_key">faq_key</string>
    <string name="pref_faq_title">FAQs</string>
    <string name="pref_faq_summery">Frequently Asked Questions</string>
    <string name="pref_rate_key">rate_key</string>
    <string name="pref_rate_title">Rate Us</string>
    <string name="pref_rate_summery">If your enjoying Android Chat, please rate our app.</string>
    <string name="pref_share_key">share_key</string>
    <string name="pref_share_title">Share</string>
    <string name="pref_share_summery">Send an invite to your friends.</string>
    <string name="pref_cat_security">Security</string>
    <string name="pref_tandc_key">tc_key</string>
    <string name="pref_tandc_title">Terms &amp; Conditions</string>
    <string name="pref_privacy_key">privacy_key</string>
    <string name="pref_privacy_title">Privacy Policy</string>

    <!-- Account Settings Keys -->
    <string name="key_auto_login">auto_login_user</string>
    <string name="pref_desc_auto_login">Automatically login using previous login details provided.</string>
    <string name="pref_title_auto_login">Auto-Login</string>
    <string name="key_block_list">block_list</string>
    <string name="pref_desc_block_list">Manage all block listed users.</string>
    <string name="pref_title_block_list">Block List</string>
    <string name="key_delete_acc">delete_acc</string>
    <string name="pref_desc_delete_acc">Warning: this action cannot be undone. Please do not exit the app during this process</string>
    <string name="pref_title_delete_acc">Delete Account</string>
    <string name="key_logout">logout</string>
    <string name="pref_desc_logout">Logout of the current session (Stop receiving push notifications).</string>
    <string name="pref_title_logout">Logout</string>
    <string name="key_online_presence">online_status</string>
    <string name="pref_desc_online_presence">Control whether other users can see your online presence (Restart application to take effect).</string>
    <string name="pref_title_online_presence">Show online presence</string>

    <string name="key_email">user_auth</string>
    <string name="pref_title_auth">Account Email</string>

    <string name="delete_dialog_msg">Once you delete your account it cannot be undone, are you ok with this?</string>
    <string name="delete_dialog_op_1">Yes</string>
    <string name="delete_dialog_op_2">No</string>

    <string name="progress_info_1">Retrieving user information</string>
    <string name="progress_info_2">Exiting from associated groups</string>
    <string name="progress_info_3">Exiting from associated one-to-one chats</string>
    <string name="progress_info_4">Proceeding to delete user account</string>
    <string name="progress_info_5">Deleting any redundant groups</string>
    <string name="progress_info_6">Collecting any related images from groups for deletion</string>
    <string name="progress_info_7">Deleting any associated one-to-one chats</string>
    <string name="progress_info_8">User account deleted</string>

    <!-- About Settings Keys -->
    <string name="about_category_title">About</string>
    <string name="app_info_category_title">App Info</string>
    <string name="pref_about_title">About Us</string>
    <string name="pref_app_info_title">App Information</string>
    <string name="pref_version_title">Version</string>
    <string name="pref_report_issue_title">Report An Issue</string>
    <string name="pref_about_summary">Learn about who we are</string>
    <string name="pref_version_summary">1.0</string>
    <string name="pref_report_issue_summary">Found an issue with the app. Report it now.</string>
    <string name="key_about_settings">pref_key_about_settings</string>
    <string name="key_app_info_settings">pref_key_app_info_settings</string>
    <string name="key_app_info">App Information</string>
    <string name="key_about_us">pref_key_about_us</string>
    <string name="key_version">pref_key_version</string>
    <string name="key_report_issue">pref_key_report_issue</string>

    <string name="naziur_description">I am the co-developer of the Android Chat android application. My key contribution to the application involves designing layouts and writing logic for managing connections with the various open-source APIs.</string>
    <string name="hamidur_description">Co-developer of Android Chat and involved in designing the various layout features as well as utilising the different web APIs. I am particularly interested in APIs and their use in producing high-quality dynamic content.</string>

    <!-- OTHER -->
    <string name="block_list_msg_block_them">This user is already blocked</string>
    <string name="block_list_msg_blocked_by_them">You may have been blocked by this user</string>
    <string name="online_status_offline">Offline</string>
    <string name="online_status_online">Online</string>

    <!-- TEXT LENGTH -->
    <string name="group_name_text">25</string>
    <string name="profile_name_text">15</string>
    <string name="username_text">10</string>

</resources>
