<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="false"
        android:key="@string/key_auto_login"
        android:summary="@string/pref_desc_auto_login"
        android:title="@string/pref_title_auto_login" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="@string/key_online_presence"
        android:summary="@string/pref_desc_online_presence"
        android:title="@string/pref_title_online_presence" />

    <EditTextPreference
        android:key="@string/key_email"
        android:title="@string/pref_title_auth" />

    <Preference
        android:key="@string/key_block_list"
        android:summary="@string/pref_desc_block_list"
        android:title="@string/pref_title_block_list" />


    <Preference
        android:key="@string/key_delete_acc"
        android:summary="@string/pref_desc_delete_acc"
        android:title="@string/pref_title_delete_acc" />

    <Preference
        android:key="@string/key_logout"
        android:summary="@string/pref_desc_logout"
        android:title="@string/pref_title_logout" />

</PreferenceScreen>