<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/about_category_title"
        android:key="@string/key_about_settings"
        >

        <Preference
            android:key="@string/key_about_us"
            android:summary="@string/pref_about_summary"
            android:title="@string/pref_about_title" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/app_info_category_title"
        android:key="@string/key_app_info_settings"
        >

        <Preference
            android:key="@string/key_app_info"
            android:summary="@string/pref_app_info_summary"
            android:title="@string/pref_app_info_title" />

        <Preference
            android:selectable="false"
            android:key="@string/key_version"
            android:summary="@string/pref_version_summary"
            android:title="@string/pref_version_title" />

        <Preference
            android:key="@string/key_report_issue"
            android:summary="@string/pref_report_issue_summary"
            android:title="@string/pref_report_issue_title" />

    </PreferenceCategory>
</PreferenceScreen>