<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_screen_bck"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.naziur.androidchat.activities.MainActivity"
    android:orientation="vertical"
    >

    <ScrollView
        android:id="@+id/scroller_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:id="@+id/main_content"
            android:layout_centerInParent="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            android:gravity="center_horizontal"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="15dp">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/ic_launcher"
                android:layout_marginBottom="15dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="5dp">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@android:drawable/ic_dialog_email"
                    android:layout_gravity="center_vertical"/>

                <EditText
                    android:id="@+id/editTextEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="Email"
                    android:inputType="textEmailAddress"
                    android:background="@drawable/bottom_border_white"
                    android:padding="15dp"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:maxLines="1"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="5dp"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/ic_username"
                    android:layout_gravity="center_vertical"/>

                <EditText
                    android:id="@+id/editTextUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="Username"
                    android:inputType="textPersonName"
                    android:background="@drawable/bottom_border_white"
                    android:padding="15dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:maxLines="1"
                    android:maxLength="@string/username_text"
                    />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                >

                <CheckBox
                    android:id="@+id/auto_log"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/white"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Auto-Login"
                    android:textColor="@color/white"
                    android:layout_toRightOf="@+id/auto_log"
                    android:layout_toEndOf="@+id/auto_log"
                    android:layout_centerVertical="true"
                    />

                <TextView
                    android:id="@+id/forgot_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forgot_username"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    />

            </RelativeLayout>

            <Button
                android:id="@+id/login_btn"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:onClick="btnLoginTapped"
                android:text="Login"
                android:background="@color/white"
                android:textColor="#6fd5b6"
                android:textStyle="bold"
                android:textSize="18sp"/>

            <TextView
                android:layout_marginTop="10dp"
                android:id="@+id/register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="16sp"
                />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
